--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_blue_plus: ^1.18.3
   auto_route: ^7.8.0
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
