--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,21 @@ dependencies:
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  camera: ^0.10.5+5
+  meta: ^1.9.1
+  equatable: ^2.0.5
+  rxdart: ^0.27.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^7.3.0
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/
