--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_blue_plus: ^1.18.3
   auto_route: ^7.8.0
   bloc: ^8.1.2
-  cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.3
   camera: ^0.10.5+5
-  meta: ^1.9.1
+  csv: ^5.1.1
+  cupertino_icons: ^1.0.2
   equatable: ^2.0.5
-  rxdart: ^0.27.7
+  flutter_bloc: ^8.1.3
+  flutter_blue_plus: ^1.18.3
+  meta: ^1.9.1
   provider: ^6.0.5
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
