--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,26 +8,27 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
   auto_route: ^7.8.0
   bloc: ^8.1.2
   camera: ^0.10.5+5
   csv: ^5.1.1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  flutter:
+    sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_blue_plus: ^1.18.3
   meta: ^1.9.1
   provider: ^6.0.5
   rxdart: ^0.27.7
+  very_good_analysis: ^5.1.0
 
 dev_dependencies:
+  auto_route_generator: ^7.3.0
+  build_runner: ^2.4.6
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  auto_route_generator: ^7.3.0
-  flutter_lints: ^2.0.0
-  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
