--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_blue_plus: ^1.18.3
+  flutter_unity_widget: ^2022.2.0
   meta: ^1.9.1
   provider: ^6.0.5
   rxdart: ^0.27.7
