--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   meta: ^1.9.1
   provider: ^6.0.5
   rxdart: ^0.27.7
+  simple_kalman: ^1.0.2
 
 dev_dependencies:
   flutter_test:
