--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ flutter {
 
 dependencies {
     // import unity
-    implementation project(':unityLibrary')
+    // implementation project(':unityLibrary')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
