--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   collection: ^1.18.0
   csv: ^5.1.1
   cupertino_icons: ^1.0.2
+  delaunay: ^2.0.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
