--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   flutter_blue_plus: ^1.18.3
+  geolocator: ^10.1.0
   meta: ^1.9.1
   provider: ^6.0.5
   rxdart: ^0.27.7
